# simlogica.github.io

./: .gitignore  404.html  Makefile  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
.simlogica/playstore/: __en.md  _en.txt  _pt.md  pt.txt
blocker/: index.html
configure/: index.html
docs/: 01-configure.md  02-faq.md  configure.md  faq.md  index.md  index.pt.md  privacy-policy.md  robots.txt  terms.md
docs/blocker/: index.md  index.pt.md
docs/configure/: configure.md  configure.pt.md  index.md  index.pt.md
docs/faq/: faq.md  faq.pt.md  index.md  index.pt.md
docs/privacy/: index.md
docs/stylesheets/: extra.css
docs/terms/: index.md  terms.md
faq/: index.html
overrides/partials/: logo.html
privacy/: index.html
pt/: index.html
pt/blocker/: index.html
pt/configure/: index.html
pt/faq/: index.html
pt/privacy/: index.html
pt/terms/: index.html
r-blocker-android/: index.html
r-privacy/: index.html
r/blocker-android/help/: index.html
r/blocker-googleplay/terms/: index.html
search/: search_index.json
terms/: index.html
