[project]
name = "venv-simlogica"
version = "0.1.0"
description = "SimLogica.com - The home of Blocker Call Controller and Antispam App."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mkdocs<2.0",
    "mkdocs-material>=9.7.2",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-redirects>=1.2.2",
]
